# STL-to-gif

./: .gitignore  README.md  STL-To-Gif.py  app.py  pyproject.toml
Resources/: cone.stl
src/: GIFCreator.py  OptionalArgument.py  STLHandler.py  optional_arguments.py
