[tool.poetry]
name = "stl-to-gif"
version = "1.0.0"
description = ""
authors = ["Edward Runkel <eddierunkel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
imageio = "2.9.0"
matplotlib = "3.3.3"
numpy = "1.19.4"
numpy-stl = "2.13.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
